<resources>
    <string name="app_name">Foodrey</string>
    <string name="title_activity_title_page">TitlePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="mapType">Toggle Type</string>
    <string name="zoomIn">&#xf067;</string>
    <string name="zoomOut">&#xf068;</string>
    <string name="custom">Custom Map</string>
    <string name="current_location">Current Location</string>
    <string name="bottom_nagivagation_home">Home</string>
    <string name="bottom_nagivagation_map">Map</string>
    <string name="bottom_nagivagation_fav">Favourite</string>
    <string name="settings">Setting</string>
    <string name="favorite">Favourite</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="tvNearbyRestaurants">Distance of nearby restaurants</string>
    <string name="number_or_restaurants">Number of restaurants</string>
    <string name="back">Back</string>
    <string name="foodrey">FOODREY</string>
    <string name="history">History</string>
    <string name="inspection_type">Inspection Type:</string>
    <string name="inspection_date">Inspection Date:</string>
    <string name="hazard_rating">Hazard Rating:</string>
    <string name="non_critical">Non-Critical</string>
    <string name="critical">Critical</string>
    <string name="TextView">TextView</string>
</resources>
