<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:layout_marginRight="4dp"
    android:layout_marginLeft="4dp"
    android:orientation="vertical">
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/inspection_date"/>
        <TextView
            android:id="@+id/tvInspDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/inspection_type"/>
        <TextView
            android:id="@+id/tvInspType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/hazard_rating"/>
        <TextView
            android:id="@+id/tvHazardRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/critical"/>
        <TextView
            android:id="@+id/tvNumCritical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/non_critical"/>
        <TextView
            android:id="@+id/tvNumNonCritical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TextView
        android:id="@+id/ViolLump"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</TableLayout>